--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gulp-clean-css": "^3.7.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "buildapp": "gulp buildcss && gulp copyimages"
   },
   "repository": {
     "type": "git",
